Transactions can release locks